# asteroids

./: .gitignore  Cargo.toml  asteroids.sublime-project
graphics/: Cargo.toml  build.rs
graphics/examples/: bouncing_balls.rs  chase_cursor.rs  circle.rs  rotating_square.rs  triangle.rs
graphics/shaders/: simple.frag  simple.vert
graphics/src/: color.rs  cursor.rs  errors.rs  events.rs  frame_timer.rs  graphic_device.rs  lib.rs  model.rs  model_transform.rs  screen.rs  shape.rs  simple.frag  simple.vert  uniforms.rs  utils.rs  vertex.rs
src/: input.rs  main.rs  physics.rs  player.rs  renderer.rs  shape.rs
