[package]
name = "graphics"
version = "0.1.0"
authors = ["Peter Higley <phigley@gmail.com>"]

[dependencies]
gfx = "*"
gfx_window_glutin = "0.21"
gfx_device_gl = "*"
# gfx_window_glutin depends on glutin 0.13
glutin = "0.13"
quick-error = "*"
nalgebra = "*"

[dev-dependencies]
time = "*"
specs = "*"
specs-derive = "*"
